Output formatting and added Skype

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "aliasio/congregate",
-	"description": "",
+	"description": "Web scraper.",
 	"authors": [
 		{
 			"name": "Elbert Alias",
